// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Labelled Input renders correctly checkbox 1`] = `
<div
  class="px-0 py-1 container-fluid"
  type="checkbox"
>
  <div
    aria-labelledby="__BVID__7__BV_label_"
    class="labelled-textarea mb-0 b-form-group form-group"
    id="__BVID__7"
    role="group"
  >
    <label
      class="col-form-label pt-0"
      for="textarea-null"
      id="__BVID__7__BV_label_"
    >
      <strong
        class="text-secondary font-italic"
      >
        Optional:
      </strong>
       Label Text 
      <br />
       
      <em
        class="text-muted"
      >
         Sublabel 
      </em>
    </label>
    <div
      class=""
    >
       
      <textarea
        class="form-control form-control-md"
        id="textarea-null"
        placeholder="Example Text"
        rows="1"
        wrap="soft"
      />
       
      <span
        class="text-right w-100"
      >
        <span>
             
        </span>
      </span>
      <!---->
      <!---->
      <!---->
    </div>
  </div>
   
  <div
    aria-atomic="true"
    aria-live="polite"
    class="mt-1 alert alert-primary"
    placement="bottom"
    role="alert"
  >
    <!---->
     Warning Text 
  </div>
</div>
`;

exports[`Labelled Input renders correctly textarea 1`] = `
<div
  class="px-0 py-1 container-fluid"
>
  <div
    aria-labelledby="__BVID__2__BV_label_"
    class="labelled-textarea mb-0 b-form-group form-group"
    id="__BVID__2"
    role="group"
  >
    <label
      class="col-form-label pt-0"
      for="textarea-null"
      id="__BVID__2__BV_label_"
    >
      <strong
        class="text-secondary font-italic"
      >
        Optional:
      </strong>
       Label Text 
      <br />
       
      <em
        class="text-muted"
      >
         Sublabel 
      </em>
    </label>
    <div
      class=""
    >
       
      <textarea
        class="form-control form-control-md"
        id="textarea-null"
        placeholder="Example Text"
        rows="1"
        wrap="soft"
      />
       
      <span
        class="text-right w-100"
      >
        <span>
             
        </span>
      </span>
      <!---->
      <!---->
      <!---->
    </div>
  </div>
   
  <div
    aria-atomic="true"
    aria-live="polite"
    class="mt-1 alert alert-primary"
    placement="bottom"
    role="alert"
  >
    <!---->
     Warning Text 
  </div>
</div>
`;
